fixed spacing issue

--- a/src/app/message-card/message-card.component.scss
+++ b/src/app/message-card/message-card.component.scss
@@ -15,7 +15,7 @@
     }
 
     .profile-text {
-        padding: 4px 0px 4px 4px;
+        padding: 4px 0px 4px 16px;
         width: 100%;
 
         .profile-name {
